syntax = "proto3";

package zitadel.user.v2;

option go_package = "github.com/zitadel/zitadel/pkg/grpc/user/v2;user";

import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";
import "zitadel/object/v2/object.proto";
import "zitadel/user/v2/email.proto";
import "zitadel/user/v2/phone.proto";

enum Gender {
  GENDER_UNSPECIFIED = 0;
  GENDER_FEMALE = 1;
  GENDER_MALE = 2;
  GENDER_DIVERSE = 3;
}

message SetHumanProfile {
  string given_name = 1  [
    (validate.rules).string = {min_len: 1, max_len: 200},
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      min_length: 1;
      max_length: 200;
      example: "\"Minnie\"";
    }
  ];
  string family_name = 2  [
    (validate.rules).string = {min_len: 1, max_len: 200},
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      min_length: 1;
      max_length: 200;
      example: "\"Mouse\"";
    }
  ];
  optional string nick_name = 3 [
    (validate.rules).string = {max_len: 200},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      max_length: 200;
      example: "\"Mini\"";
    }
  ];
  optional string display_name = 4 [
    (validate.rules).string = {max_len: 200},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      max_length: 200;
      example: "\"Minnie Mouse\"";
    }
  ];
  optional string preferred_language = 5 [
    (validate.rules).string = {max_len: 10},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      max_length: 10;
      example: "\"en\"";
    }
  ];
  optional Gender gender = 6 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"GENDER_FEMALE\"";
    }
  ];
}

message HumanProfile {
  string given_name = 1  [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      min_length: 1;
      max_length: 200;
      example: "\"Minnie\"";
    }
  ];
  string family_name = 2  [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      min_length: 1;
      max_length: 200;
      example: "\"Mouse\"";
    }
  ];
  optional string nick_name = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      max_length: 200;
      example: "\"Mini\"";
    }
  ];
  optional string display_name = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      max_length: 200;
      example: "\"Minnie Mouse\"";
    }
  ];
  optional string preferred_language = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      max_length: 10;
      example: "\"en\"";
    }
  ];
  optional Gender gender = 6 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"GENDER_FEMALE\"";
    }
  ];
  string avatar_url = 7 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "avatar URL of the user"
      example: "\"https://api.zitadel.ch/assets/v1/avatar-32432jkh4kj32\"";
    }
  ];
}

message SetMetadataEntry {
  string key = 1 [
    (validate.rules).string = {min_len: 1, max_len: 200},
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"my-key\"";
      min_length: 1,
      max_length: 200;
    }
  ];
  bytes value = 2 [
    (validate.rules).bytes = {min_len: 1, max_len: 500000},
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The value has to be base64 encoded.";
      example: "\"VGhpcyBpcyBteSB0ZXN0IHZhbHVl\"";
      min_length: 1,
      max_length: 500000;
    }
  ];
}

message HumanUser {
  // Unique identifier of the user.
  string user_id = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"d654e6ba-70a3-48ef-a95d-37c8d8a7901a\"";
    }
  ];
  // State of the user, for example active, inactive, locked, deleted, initial.
  UserState state = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "current state of the user";
    }
  ];
  // Username of the user, which can be globally unique or unique on organization level.
  string username = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"minnie-mouse\"";
    }
  ];
  // Possible usable login names for the user.
  repeated string login_names = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "[\"gigi@zitadel.com\", \"gigi@zitadel.zitadel.ch\"]";
    }
  ];
  // Preferred login name of the user.
  string preferred_login_name = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"gigi@zitadel.com\"";
    }
  ];
  // Profile information of the user.
  HumanProfile profile = 6;
  // Email of the user, if defined.
  HumanEmail email = 7;
  // Phone of the user, if defined.
  HumanPhone phone = 8;
  // User is required to change the used password on the next login.
  bool password_change_required = 9;
  // The time the user last changed their password.
  google.protobuf.Timestamp password_changed = 10;
}

message User {
  string user_id = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"d654e6ba-70a3-48ef-a95d-37c8d8a7901a\"";
    }
  ];
  zitadel.object.v2.Details details = 8;
  UserState state = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "current state of the user";
    }
  ];
  string username = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"minnie-mouse\"";
    }
  ];
  repeated string login_names = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "[\"gigi@zitadel.com\", \"gigi@zitadel.zitadel.ch\"]";
    }
  ];
  string preferred_login_name = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"gigi@zitadel.com\"";
    }
  ];
  oneof type {
    HumanUser human = 6 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "one of type use human or machine"
      }
    ];
    MachineUser machine = 7 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "one of type use human or machine"
      }
    ];
  }
}

message MachineUser {
  string name = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"zitadel\"";
    }
  ];
  string description = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"The one and only IAM\"";
    }
  ];
  bool has_secret = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"true\"";
    }
  ];
  AccessTokenType access_token_type = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Type of access token to receive";
    }
  ];
}

enum AccessTokenType {
  ACCESS_TOKEN_TYPE_BEARER = 0;
  ACCESS_TOKEN_TYPE_JWT = 1;
}

enum UserState {
  USER_STATE_UNSPECIFIED = 0;
  USER_STATE_ACTIVE = 1;
  USER_STATE_INACTIVE = 2;
  USER_STATE_DELETED = 3;
  USER_STATE_LOCKED = 4;
  USER_STATE_INITIAL = 5;
}


message Passkey {
  string id = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"69629023906488334\""
    }
  ];
  AuthFactorState state = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "current state of the passkey";
    }
  ];
  string name = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      min_length: 1;
      max_length: 200;
      example: "\"fido key\""
    }
  ];
}

message AuthFactor {
  AuthFactorState state = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "current state of the auth factor";
    }
  ];
  oneof type {
    AuthFactorOTP otp = 2 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "TOTP second factor"
      }
    ];
    AuthFactorU2F u2f = 3 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "U2F second factor"
      }
    ];
    AuthFactorOTPSMS otp_sms = 4 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "SMS second factor"
      }
    ];
    AuthFactorOTPEmail otp_email = 5 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "Email second factor"
      }
    ];
  }
}

enum AuthFactorState {
  AUTH_FACTOR_STATE_UNSPECIFIED = 0;
  AUTH_FACTOR_STATE_NOT_READY = 1;
  AUTH_FACTOR_STATE_READY = 2;
  AUTH_FACTOR_STATE_REMOVED = 3;
}

message AuthFactorOTP {}
message AuthFactorOTPSMS {}
message AuthFactorOTPEmail {}

message AuthFactorU2F {
  string id = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"69629023906488334\""
    }
  ];
  string name = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"fido key\""
    }
  ];
}

message SendInviteCode {
  // Optionally set a url_template, which will be used in the invite mail sent by ZITADEL to guide the user to your invitation page.
  // If no template is set, the default ZITADEL url will be used.
  //
  // The following placeholders can be used: UserID, OrgID, Code
  optional string url_template = 1 [
    (validate.rules).string = {min_len: 1, max_len: 200},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      min_length: 1;
      max_length: 200;
      example: "\"https://example.com/user/invite?userID={{.UserID}}&code={{.Code}}&orgID={{.OrgID}}\"";
    }
  ];
  // Optionally set an application name, which will be used in the invite mail sent by ZITADEL.
  // If no application name is set, ZITADEL will be used as default.
  optional string application_name = 2 [
    (validate.rules).string = {min_len: 1, max_len: 200},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      min_length: 1;
      max_length: 200;
      example: "\"CustomerPortal\"";
    }
  ];
}

message ReturnInviteCode {}

